fixed visibility of providers?

--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ h1 {
     margin-bottom: 0.05em;
     font-size: 1.05em;
     cursor: pointer;
-    color: rgba(255, 255, 255, 0.7); /* Faintly visible white text by default */
+    color: #d4d4d4
     border-radius: 3px;
     position: relative;
     overflow: hidden;
